Fix addTag test and remove null check from addTag method